# waltz

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
requirements/: base.txt  debug.txt  dev.txt  prod.txt
scripts/: run.sh
src/: manage.py
src/apps/topics/: admin.py  apps.py  models.py  serializers.py  tasks.py  types.py  urls.py  views.py
src/apps/topics/management/commands/: add_hot_topic.py
src/apps/topics/migrations/: 0001_initial.py
src/config/: __init__.py  asgi.py  celery.py  logs.py  server.py  urls.py
src/config/settings/: base.py  dev.py  prod.py
tests/: conftest.py
tests/test_api/: test_topics_api.py
