[project]
name = "waltz"
version = "0.1.0"

[tool.ruff]
line-length = 100
select = ["D", "E", "F", "I", "UP", "N", "S", "C", "B"]
ignore = ["D100", "D104", "D105", "D107"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"
DJANGO_SETTINGS_MODULE = "src.config.settings.dev"
